# screenshot-text

./: AGENTS.md  README.md  config.sample.toml  pyproject.toml
src/screenshot_text/: __init__.py  __main__.py  actions.py  config.py  detector.py  main.py  ocr.py  preprocess.py  region_selector.py  screen_capture.py
tests/: test_config.py  test_detector.py  test_ocr.py
